Remove DataTreeModification.getRootPath()
This method is using DataTreeIdentifier and has been deprecated for two
years: remove it.

Change-Id: I259e7040171f8de4a1ebb44dace64809e3d3f862
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>